--- a/Reportes/nbproject/project.properties
+++ b/Reportes/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Graficas.jar
+dist.jar=${dist.dir}/Reportes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.okhttp-2.2.0.jar=C:\\Librer\u00edas\\Ok\\okhttp-2.2.0.jar
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=graficas.Graficas
+main.class=reportes.Reportes
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
