--- a/WebApi/proyecto1WebApi/proyecto1WebApi.csproj
+++ b/WebApi/proyecto1WebApi/proyecto1WebApi.csproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="imagenes\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
