--- a/ApliProyEDD/nbproject/project.properties
+++ b/ApliProyEDD/nbproject/project.properties
@@ -45,9 +45,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
+    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.okhttp-2.2.0.jar}:\
-    ${file.reference.okio-1.2.0.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.okio-1.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
